--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,18 +1,33 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splashbg"
     android:orientation="vertical">
-    <Button
-        android:layout_marginTop="72dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SignIn"
-        android:id="@+id/goToSignUp"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create an Account"
-        android:id="@+id/goToLogin"/>
 
-    </LinearLayout>
+
+    <Button
+        android:id="@+id/goToLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/primary_green"
+        android:paddingHorizontal="40dp"
+        android:paddingVertical="12dp"
+        android:text="Sign In"
+        android:textColor="@android:color/white" />
+
+    <Button
+        android:id="@+id/goToSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/goToLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#5131570F"
+        android:paddingHorizontal="40dp"
+        android:paddingVertical="12dp"
+        android:text="Create an Account"
+        android:textColor="@android:color/white" />
+
+</RelativeLayout>
