--- a/app/src/main/res/layout/activity_home_dashboard.xml
+++ b/app/src/main/res/layout/activity_home_dashboard.xml
@@ -215,35 +215,41 @@
     </androidx.cardview.widget.CardView>
 
     <!-- Grid Layout for Options -->
+
+
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/options_grid"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
+        android:layout_marginTop="20dp"
+
         app:alignmentMode="alignMargins"
         app:columnCount="2"
         app:columnOrderPreserved="false"
-        app:layout_constraintTop_toBottomOf="@id/weather_card"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/weather_card"
+        app:layout_constraintVertical_bias="0.0"
         app:rowCount="2"
         tools:ignore="MissingClass">
 
         <!-- First Item - Appointments -->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="140dp"
             android:layout_margin="8dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="6dp"
-            app:layout_columnWeight= "1"
+            app:layout_columnWeight="1"
             app:layout_rowWeight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -256,9 +262,20 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Schemes"
-                    android:textSize="14sp"
                     android:textColor="@android:color/black"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Be updated about all Govt. Schemes"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="8sp"
+                    android:textStyle="italic" />
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -276,8 +293,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -290,9 +307,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Pest Control"
-                    android:textSize="14sp"
                     android:textColor="@android:color/black"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Learn about all Pest Control Methods"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="8sp"
+                    android:textStyle="italic" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -300,7 +327,7 @@
         <!-- Third Item - Health Tips -->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="140dp"
             android:layout_margin="8dp"
             app:cardCornerRadius="12dp"
             app:cardElevation="6dp"
@@ -310,8 +337,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -324,9 +351,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Electricity"
-                    android:textSize="14sp"
                     android:textColor="@android:color/black"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Get details about bills"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="8sp"
+                    android:textStyle="italic" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -344,8 +381,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="40dp"
@@ -358,30 +395,37 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Soil Quality"
-                    android:textSize="14sp"
                     android:textColor="@android:color/black"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Check Soil Quality"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="8sp"
+                    android:textStyle="italic" />
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
     </androidx.gridlayout.widget.GridLayout>
 
-
-
-
-
-
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
-        android:background="@color/grey_green"
+        android:background="@color/primary_green"
+        app:itemActiveIndicatorStyle="@color/white"
         app:menu="@menu/bottom_nav_menu"
-        app:itemIconTint="@color/ic_launcher_background"
-        app:itemTextColor="@color/primary_lightgreen"
+        app:itemTextAppearanceInactive="@color/primary_green"
+        app:itemIconTint="@color/nav_item_color"
+        app:itemTextColor="@color/nav_item_color"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
