--- a/app/src/main/res/layout/activity_home_dashboard.xml
+++ b/app/src/main/res/layout/activity_home_dashboard.xml
@@ -83,8 +83,8 @@
 
             <ImageView
                 android:id="@+id/weather_icon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/ic_partial_cloud"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -149,6 +149,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="28°C"
+                        android:id="@+id/temprature_text"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -266,15 +267,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Be updated about all Govt. Schemes"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="8sp"
-                    android:textStyle="italic" />
+
 
 
             </LinearLayout>
@@ -311,15 +304,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Learn about all Pest Control Methods"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="8sp"
-                    android:textStyle="italic" />
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -355,15 +340,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Get details about bills"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="8sp"
-                    android:textStyle="italic" />
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -399,15 +376,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Check Soil Quality"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="8sp"
-                    android:textStyle="italic" />
+
 
 
             </LinearLayout>
